<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginEnd="1dp"
    android:layout_marginStart="1dp"
    android:elevation="16dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/viewBorder"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/sucess" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="60dp"
                android:layout_height="15dp"
                android:background="@color/sucess"
                android:gravity="center"
                android:text="@string/str_tvStatus"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="8sp" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:paddingEnd="10dp"
                android:paddingTop="4dp"
                android:src="@drawable/ic_delete" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProjectname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center"
                android:text="@string/str_tvProjectname"
                android:textColor="@color/sucess"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLabletime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/str_tvLabletime"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@+id/tvLabletime"
                    android:text="@string/str_tvLog"
                    android:textSize="12sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvTimeago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@+id/tvTime"
                    android:text="@string/str_tvTimeago"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTime"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/deploy_log"
                    android:textColor="@color/sucess"
                    android:textSize="13sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnDeply"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@+id/tvLog"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="6dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ripple_effect_green"
                    android:text="@string/str_btnDeply"
                    android:textAllCaps="true"
                    android:textColor="#fff" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
