<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/white_rounded"
        android:elevation="16dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessageDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/exclamation_mark"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/str_tvInternet"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/str_tvInternetmessage"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/str_close"
                android:textColor="@color/green"
                android:textSize="14sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
