<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/white_rounded"
        android:elevation="16dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/str_tvMessage"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/str_cancel_desc"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#e6e6e6" />

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/str_ok"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
